Added simple RAG without memory

--- a/RAG_without_memory.ipynb
+++ b/RAG_without_memory.ipynb
@@ -17,16 +17,16 @@
     "from langchain_huggingface import HuggingFaceEmbeddings\n",
     "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
     "from langchain_community.vectorstores import FAISS\n",
+    "from transformers import pipeline\n",
+    "from langchain.chains import RetrievalQA\n",
     "from dotenv import load_dotenv\n",
     "import os\n",
     "from groq import Groq\n",
     "from langchain_groq import ChatGroq\n",
+    "from langchain.chains import ConversationChain\n",
+    "from langchain.memory import ConversationBufferMemory\n",
     "import ipywidgets as widgets\n",
-    "from IPython.display import display, HTML\n",
-    "from langchain_core.prompts import ChatPromptTemplate\n",
-    "from langchain_core.runnables import chain\n",
-    "from langchain_core.chat_history import InMemoryChatMessageHistory\n",
-    "from langchain_core.runnables.history import RunnableWithMessageHistory"
+    "from IPython.display import display, HTML"
    ]
   },
   {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,31 +230,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_retriever=vectorstore.as_retriever(search_type=\"similarity\", search_kwargs={\"k\": 5})"
+    "# Load the API key from .env file\n",
+    "load_dotenv()\n",
+    "chatgroq_api_key = os.getenv(\"GROQ_API_KEY\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "VectorStoreRetriever(tags=['FAISS', 'HuggingFaceEmbeddings'], vectorstore=<langchain_community.vectorstores.faiss.FAISS object at 0x000001AB21BF4730>, search_kwargs={'k': 5})"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "db_retriever"
+    "# Initialize the ChatGroq model\n",
+    "chatgroq_model = ChatGroq(temperature=0,\n",
+    "                      model_name=\"mixtral-8x7b-32768\",\n",
+    "                      api_key=chatgroq_api_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a RetrievalQA chain\n",
+    "qa_chain = RetrievalQA.from_chain_type(\n",
+    "    llm=chatgroq_model,\n",
+    "    chain_type=\"stuff\",\n",
+    "    retriever=vectorstore.as_retriever(search_type=\"similarity\", search_kwargs={\"k\": 5}),\n",
+    "    return_source_documents=True,\n",
+    "    # verbose=True\n",
+    ")"
    ]
   },
   {
@@ -266,208 +276,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load the API key from .env file\n",
-    "load_dotenv()\n",
-    "chatgroq_api_key = os.getenv(\"GROQ_API_KEY\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initialize the ChatGroq model\n",
-    "chatgroq_model = ChatGroq(temperature=0,\n",
-    "                      model_name=\"deepseek-r1-distill-llama-70b\",\n",
-    "                      api_key=chatgroq_api_key)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define a function to extract the content of a message\n",
-    "def get_msg_content(msg):\n",
-    "    return msg.content\n",
-    "\n",
-    "# Define the SYSTEM prompt for contextualizing the chat history to come up with a standalone question\n",
-    "contextualize_system_prompt = (\n",
-    "    \"Given a chat history and the latest user question \"\n",
-    "    \"which might reference context in the chat history, \"\n",
-    "    \"formulate a standalone question which can be understood \"\n",
-    "    \"without the chat history. Do NOT answer the question, \"\n",
-    "    \"just reformulate it if needed and otherwise return it as is.\"\n",
-    ")\n",
-    "\n",
-    "# Define the prompt for contextualizing the chat history to come up with a standalone question\n",
-    "contextualize_prompt = ChatPromptTemplate.from_messages([\n",
-    "    (\"system\", contextualize_system_prompt),\n",
-    "    (\"placeholder\", \"{chat_history}\"),\n",
-    "    (\"human\", \"{input}\"),\n",
-    "])\n",
-    "\n",
-    "# Define the chain for contextualizing the chat history to come up with a standalone question\n",
-    "contextualize_chain = (\n",
-    "    contextualize_prompt\n",
-    "    | chatgroq_model\n",
-    "    | get_msg_content\n",
-    ")\n",
-    "     "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define the question-answering SYSTEM prompt to generate the final answer\n",
-    "qa_system_prompt = (\n",
-    "    \"You are an assistant for question-answering tasks. \"\n",
-    "    \"Use the following pieces of retrieved context to answer \"\n",
-    "    \"the question. If you don't know the answer, say that you \"\n",
-    "    \"don't know.\"\n",
-    "    \"\\n\\n\"\n",
-    "    \"{context}\"\n",
-    ")\n",
-    "\n",
-    "# Define the question-answering prompt to generate the final answer\n",
-    "qa_prompt = ChatPromptTemplate.from_messages(\n",
-    "    [\n",
-    "        (\"system\", qa_system_prompt),\n",
-    "        (\"placeholder\", \"{chat_history}\"),\n",
-    "        (\"human\", \"{input}\"),\n",
-    "    ]\n",
-    ")\n",
-    "\n",
-    "# Define the chain to generate the final answer\n",
-    "qa_chain = (\n",
-    "    qa_prompt\n",
-    "    | chatgroq_model\n",
-    "    | get_msg_content\n",
-    ") "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define the overall chain the uses both the retrieved documents and the chat history to answer the question\n",
-    "@chain\n",
-    "def history_aware_qa(input):\n",
-    "     # Rephrase the question if needed\n",
-    "     if input.get('chat_history'):\n",
-    "         question = contextualize_chain.invoke(input)\n",
-    "     else:\n",
-    "         question = input['input']\n",
-    "    \n",
-    "     # Get context from the retriever\n",
-    "     context = db_retriever.invoke(question)\n",
-    "\n",
-    "     # Get the final answer\n",
-    "     return qa_chain.invoke({\n",
-    "         **input,\n",
-    "         \"context\": context\n",
-    "     })"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Next, let’s incorporate stateful management of chat history and send the final prompt, \n",
-    "# including chat history and retrieved context to the model for an output.\n",
-    "chat_history_for_chain = InMemoryChatMessageHistory()\n",
-    "qa_with_history = RunnableWithMessageHistory(\n",
-    "    history_aware_qa,\n",
-    "    lambda _: chat_history_for_chain,\n",
-    "    input_messages_key=\"input\",\n",
-    "    history_messages_key=\"chat_history\",\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<think>\n",
-      "Okay, so the user is asking about the main theme of \"Verity\" again. I remember they asked this before, and I provided a detailed answer. Let me check the history to make sure I'm consistent.\n",
-      "\n",
-      "Looking back, I explained that the main theme revolves around psychological exploration, the complexity of characters, and the blurred lines between reality and fiction. I also mentioned mental health and moral ambiguity.\n",
-      "\n",
-      "Now, the user is asking the same question again. Maybe they want a more concise answer or perhaps they didn't fully grasp it the first time. I should keep the response consistent but perhaps simplify it a bit.\n",
-      "\n",
-      "I should focus on the key elements: psychological depth, truth vs. fiction, and the darker aspects of human nature. Also, mentioning the departure from Hoover's usual style might be helpful.\n",
-      "\n",
-      "I need to ensure the answer is clear and directly addresses the main theme without going into too much detail, as the user might be looking for a quick summary.\n",
-      "</think>\n",
-      "\n",
-      "The main theme of *Verity* by Colleen Hoover revolves around psychological depth, the exploration of truth versus fiction, and the complexity of human behavior. The story delves into darker aspects of human nature, moral ambiguity, and the blurred lines between reality and imagination. It also touches on themes of mental health, jealousy, and the lengths to which people might go when driven by their emotions or motivations. The novel is known for its intense character development and its departure from Hoover's more traditional romantic storytelling.\n"
-     ]
-    }
-   ],
-   "source": [
-    "result = qa_with_history.invoke(\n",
-    "        {\"input\": \"What is the main theme of Verity?\"},\n",
-    "        config={\"configurable\": {\"session_id\": \"123\"}},\n",
-    "    )\n",
-    "print(result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<think>\n",
-      "Alright, let me try to figure out what the user is asking for here. So, looking at the conversation history, the user has been asking about the main theme of \"Verity\" by Colleen Hoover multiple times. Each time, I provided a detailed answer focusing on psychological depth, truth vs. fiction, and human complexity. \n",
-      "\n",
-      "Now, the user's latest query is \"what was my previous question.\" I need to determine what they're referring to. Since the conversation is about the main theme, it's likely they're asking about their last question in this chain, which was indeed about the main theme. \n",
-      "\n",
-      "I should make sure to clarify that I'm referring to the most recent question they asked before this one. So, I'll explain that their previous question was about the main theme of \"Verity.\" This way, the user knows exactly which part of the conversation I'm referencing.\n",
-      "</think>\n",
-      "\n",
-      "Your previous question was: \"What is the main theme of Verity?\"\n"
-     ]
-    }
-   ],
-   "source": [
-    "result = qa_with_history.invoke(\n",
-    "        {\"input\": \"what was my previous question\"},\n",
-    "        config={\"configurable\": {\"session_id\": \"123\"}},\n",
-    "    )\n",
-    "print(result)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "56857ed0675b47fbbbb878f594c4a3e2",
+       "model_id": "e66cc9f9eac2497fbdfa0a44788b87f5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -482,12 +297,8 @@
    "source": [
     "# Define the chatbot response function\n",
     "def chatbot_response(user_input):\n",
-    "    # Finally, let's invoke the chain\n",
-    "    result = qa_with_history.invoke(\n",
-    "        {\"input\": user_input},\n",
-    "        config={\"configurable\": {\"session_id\": \"123\"}},\n",
-    "    )\n",
-    "    return f\"{result}\"\n",
+    "    result = qa_chain({\"query\": user_input})\n",
+    "    return f\"{result['result']}\"\n",
     "\n",
     "# Create the chatbot UI\n",
     "# Text input for user messages\n",
@@ -519,22 +330,9 @@
     "            \n",
     "            # Get the chatbot's response\n",
     "            bot_response = chatbot_response(user_message)\n",
-    "\n",
-    "            # Extract the content within the <think> tag\n",
-    "            think_content = bot_response.split('<think>')[1].split('</think>')[0].strip()\n",
-    "\n",
-    "            # Extract the bot's response after the <think> tag\n",
-    "            answer_content = bot_response.split('</think>')[1].strip()\n",
-    "\n",
-    "            # Format the output\n",
-    "            formatted_output = f\"\"\"\n",
-    "            <strong>Bot Thinking:</strong> <think>{think_content}</think>\n",
-    "            <br>\n",
-    "            <strong>Answer:</strong> {answer_content}\n",
-    "            \"\"\"\n",
     "            \n",
     "            # Display the bot's response\n",
-    "            display(HTML(f\"<strong>AskAI</strong> {formatted_output}\"))\n",
+    "            display(HTML(f\"<strong>Bot:</strong> {bot_response} <br>\"))\n",
     "            display(HTML(\"<br>\"))\n",
     "            # Clear the input box\n",
     "            user_input.value = \"\"\n",
