Updated simple RAG with memory

--- a/RAG.ipynb
+++ b/RAG.ipynb
@@ -496,7 +496,7 @@
     "- You: What is the main theme of Verity?\n",
     "- AskAI Answer: The main theme of \"Verity\" by Colleen Hoover revolves around the exploration of human motivations, the darker aspects of relationships, and the psychological depth of characters. The book delves into secrets, betrayal, and the complexities of human behavior, while also touching on the blurred lines between reality and fiction. It represents a departure from Hoover's typical emotional love stories, embracing a more intense and psychological narrative.\n",
     "---\n",
-    "- You: ho murdered Megan Hipwell?\n",
+    "- You: Who murdered Megan Hipwell?\n",
     "- AskAI Answer: In \"The Girl on the Train\" by Paula Hawkins, the murderer of Megan Hipwell is revealed to be **Tom Watson**. Tom, who is also the ex-husband of the protagonist Rachel Watson, killed Megan after she discovered his affair with her.\n",
     "---\n",
     "- You: What last 2 questions did I ask?\n",
