Updated simple RAG with memory

--- a/RAG.ipynb
+++ b/RAG.ipynb
@@ -70,6 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Read pdfs data using PyMuPDF reader which is useful for adding detail metadata\n",
     "verity_book = PyMuPDFLoader(\"./Dataset/Verity-By-Colleen-Hoover.pdf\")\n",
     "tgott_book = PyMuPDFLoader(\"./Dataset/The-Girl-on-the-Train.pdf\")"
    ]
@@ -80,6 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load the pdfs\n",
     "verity_book_pages = verity_book.load()\n",
     "tgott_book_pages = tgott_book.load()"
    ]
@@ -164,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,16 +241,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "VectorStoreRetriever(tags=['FAISS', 'HuggingFaceEmbeddings'], vectorstore=<langchain_community.vectorstores.faiss.FAISS object at 0x000001E725A74CA0>, search_kwargs={'k': 5})"
+       "VectorStoreRetriever(tags=['FAISS', 'HuggingFaceEmbeddings'], vectorstore=<langchain_community.vectorstores.faiss.FAISS object at 0x00000201B1740C70>, search_kwargs={'k': 5})"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +301,7 @@
     "\n",
     "# Define the SYSTEM prompt for contextualizing the chat history to come up with a standalone question\n",
     "contextualize_system_prompt = (\n",
-    "    \"\"\"Given a chat history and the latest user question \\\n",
+    "\"\"\"Given a chat history and the latest user question \\\n",
     "which might reference context in the chat history, formulate a standalone question which can be understood \\\n",
     "without the chat history. Do NOT answer the question, just reformulate it if needed and otherwise return it as is.\"\"\"\n",
     ")\n",
@@ -321,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,32 +358,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define the overall chain the uses both the retrieved documents and the chat history to answer the question\n",
     "@chain\n",
     "def history_aware_qa(input):\n",
-    "     # Rephrase the question if needed\n",
-    "     if input.get('chat_history'):\n",
-    "         question = contextualize_chain.invoke(input)\n",
-    "     else:\n",
-    "         question = input['input']\n",
-    "    \n",
-    "     # Get context from the retriever\n",
-    "     context = db_retriever.invoke(question)\n",
+    "    # Rephrase the question if needed\n",
+    "    if input.get('chat_history'):\n",
+    "        question = contextualize_chain.invoke(input)\n",
+    "    else:\n",
+    "        question = input['input']\n",
     "\n",
-    "     # Get the final answer\n",
-    "     return qa_chain.invoke({\n",
-    "         **input,\n",
-    "         \"context\": context\n",
-    "     })"
+    "    # print(input)\n",
+    "    # Get context from the retriever\n",
+    "    context = db_retriever.invoke(question)\n",
+    "    # print(context)\n",
+    "    \n",
+    "    # Get the final answer\n",
+    "    return qa_chain.invoke({\n",
+    "        **input,\n",
+    "        \"context\": context\n",
+    "    })"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,13 +402,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "879a5a6581694fa4b0e7be5762fc2fc7",
+       "model_id": "432ec659162848b0b82ba807891e1d19",
        "version_major": 2,
        "version_minor": 0
       },
@@ -422,7 +426,7 @@
     "    # Finally, let's invoke the chain\n",
     "    result = qa_with_history.invoke(\n",
     "        {\"input\": user_input},\n",
-    "        config={\"configurable\": {\"session_id\": \"123\"}},\n",
+    "        config={\"configurable\": {\"session_id\": \"1\"}},\n",
     "    )\n",
     "    return f\"{result}\"\n",
     "\n",
