--- a/Advance_RAG_with_memory.ipynb
+++ b/Advance_RAG_with_memory.ipynb
@@ -70,6 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Read pdfs data using PyMuPDF reader which is useful for adding detail metadata\n",
     "verity_book = PyMuPDFLoader(\"./Dataset/Verity-By-Colleen-Hoover.pdf\")\n",
     "tgott_book = PyMuPDFLoader(\"./Dataset/The-Girl-on-the-Train.pdf\")"
    ]
@@ -80,6 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load the pdfs\n",
     "verity_book_pages = verity_book.load()\n",
     "tgott_book_pages = tgott_book.load()"
    ]
@@ -164,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,16 +241,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "VectorStoreRetriever(tags=['FAISS', 'HuggingFaceEmbeddings'], vectorstore=<langchain_community.vectorstores.faiss.FAISS object at 0x000001E725A74CA0>, search_kwargs={'k': 5})"
+       "VectorStoreRetriever(tags=['FAISS', 'HuggingFaceEmbeddings'], vectorstore=<langchain_community.vectorstores.faiss.FAISS object at 0x00000201B1740C70>, search_kwargs={'k': 5})"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +301,7 @@
     "\n",
     "# Define the SYSTEM prompt for contextualizing the chat history to come up with a standalone question\n",
     "contextualize_system_prompt = (\n",
-    "    \"\"\"Given a chat history and the latest user question \\\n",
+    "\"\"\"Given a chat history and the latest user question \\\n",
     "which might reference context in the chat history, formulate a standalone question which can be understood \\\n",
     "without the chat history. Do NOT answer the question, just reformulate it if needed and otherwise return it as is.\"\"\"\n",
     ")\n",
@@ -316,13 +318,12 @@
     "    contextualize_prompt\n",
     "    | chatgroq_model\n",
     "    | get_msg_content\n",
-    ")\n",
-    "     "
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,32 +358,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define the overall chain the uses both the retrieved documents and the chat history to answer the question\n",
     "@chain\n",
     "def history_aware_qa(input):\n",
-    "     # Rephrase the question if needed\n",
-    "     if input.get('chat_history'):\n",
-    "         question = contextualize_chain.invoke(input)\n",
-    "     else:\n",
-    "         question = input['input']\n",
-    "    \n",
-    "     # Get context from the retriever\n",
-    "     context = db_retriever.invoke(question)\n",
+    "    # Rephrase the question if needed\n",
+    "    if input.get('chat_history'):\n",
+    "        question = contextualize_chain.invoke(input)\n",
+    "    else:\n",
+    "        question = input['input']\n",
     "\n",
-    "     # Get the final answer\n",
-    "     return qa_chain.invoke({\n",
-    "         **input,\n",
-    "         \"context\": context\n",
-    "     })"
+    "    # print(input)\n",
+    "    # Get context from the retriever\n",
+    "    context = db_retriever.invoke(question)\n",
+    "    # print(context)\n",
+    "    \n",
+    "    # Get the final answer\n",
+    "    return qa_chain.invoke({\n",
+    "        **input,\n",
+    "        \"context\": context\n",
+    "    })"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,13 +402,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "879a5a6581694fa4b0e7be5762fc2fc7",
+       "model_id": "432ec659162848b0b82ba807891e1d19",
        "version_major": 2,
        "version_minor": 0
       },
@@ -423,7 +426,7 @@
     "    # Finally, let's invoke the chain\n",
     "    result = qa_with_history.invoke(\n",
     "        {\"input\": user_input},\n",
-    "        config={\"configurable\": {\"session_id\": \"123\"}},\n",
+    "        config={\"configurable\": {\"session_id\": \"1\"}},\n",
     "    )\n",
     "    return f\"{result}\"\n",
     "\n",
@@ -497,7 +500,7 @@
     "- You: What is the main theme of Verity?\n",
     "- AskAI Answer: The main theme of \"Verity\" by Colleen Hoover revolves around the exploration of human motivations, the darker aspects of relationships, and the psychological depth of characters. The book delves into secrets, betrayal, and the complexities of human behavior, while also touching on the blurred lines between reality and fiction. It represents a departure from Hoover's typical emotional love stories, embracing a more intense and psychological narrative.\n",
     "---\n",
-    "- You: ho murdered Megan Hipwell?\n",
+    "- You: Who murdered Megan Hipwell?\n",
     "- AskAI Answer: In \"The Girl on the Train\" by Paula Hawkins, the murderer of Megan Hipwell is revealed to be **Tom Watson**. Tom, who is also the ex-husband of the protagonist Rachel Watson, killed Megan after she discovered his affair with her.\n",
     "---\n",
     "- You: What last 2 questions did I ask?\n",
