Added Advance RAG File

--- a/RAG_with_memory.ipynb
+++ b/RAG_with_memory.ipynb
@@ -521,7 +521,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Simple rag is able to answer direct questions about novels but it is not able to answer complext questions correctly like How many childern do Verity and Jeremy have and tell me their children names?"
+    "#### Simple RAG is able to answer direct questions about novels but it is not able to answer complex questions correctly like How many childern do Verity and Jeremy have and tell me their children names?"
    ]
   },
   {
