Updated Advance RAG File

--- a/Advance_RAG_with_memory.ipynb
+++ b/Advance_RAG_with_memory.ipynb
@@ -485,8 +485,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# verity_book_uuids = [str(uuid4()) for _ in range(len(verity_book_final_chunks))]\n",
-    "# tgott_book_uuids = [str(uuid4()) for _ in range(len(tgott_book_final_chunks))]"
+    "verity_book_uuids = [str(uuid4()) for _ in range(len(verity_book_final_chunks))]\n",
+    "tgott_book_uuids = [str(uuid4()) for _ in range(len(tgott_book_final_chunks))]"
    ]
   },
   {
