Updated Advance RAG File

--- a/Advance_RAG_with_memory.ipynb
+++ b/Advance_RAG_with_memory.ipynb
@@ -1780,6 +1780,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Some Example Question and Answer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---\n",
     "- You: What is the main theme of Verity?\n",
     "- AskAI Answer: TThe main theme of \"Verity\" by Colleen Hoover revolves around the complexity of truth, psychological manipulation, and the intricate dynamics of human relationships. The novel explores how individuals can hide their true selves, the impact of past traumas on present behavior, and the moral ambiguities that arise in personal and professional contexts. The title itself, \"Verity,\" meaning truth, underscores the journey of uncovering hidden truths about the characters and their pasts. Additionally, the book delves into themes of self-discovery and the struggle with internal demons, highlighting the darker aspects of human nature and relationships.\n",
