--- a/RAG_with_memory.ipynb
+++ b/RAG_with_memory.ipynb
@@ -496,6 +496,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Some Example Question and Answer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---\n",
     "- You: What is the main theme of Verity?\n",
     "- AskAI Answer: The main theme of \"Verity\" by Colleen Hoover revolves around the exploration of human motivations, the darker aspects of relationships, and the psychological depth of characters. The book delves into secrets, betrayal, and the complexities of human behavior, while also touching on the blurred lines between reality and fiction. It represents a departure from Hoover's typical emotional love stories, embracing a more intense and psychological narrative.\n",
