Updated execution counts and added session-specific chat history management in RAG_with_memory notebook

--- a/RAG_with_memory.ipynb
+++ b/RAG_with_memory.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,16 +241,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "VectorStoreRetriever(tags=['FAISS', 'HuggingFaceEmbeddings'], vectorstore=<langchain_community.vectorstores.faiss.FAISS object at 0x00000201B1740C70>, search_kwargs={'k': 5})"
+       "VectorStoreRetriever(tags=['FAISS', 'HuggingFaceEmbeddings'], vectorstore=<langchain_community.vectorstores.faiss.FAISS object at 0x000001A9656B9960>, search_kwargs={'k': 5})"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,18 +268,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the API key from .env file\n",
     "load_dotenv()\n",
-    "chatgroq_api_key = os.getenv(\"GROQ_API_KEY\")"
+    "chatgroq_api_key = os.getenv(\"GROQ_API_KEY\")\n",
+    "# chatgroq_api_key"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,16 +386,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Next, let’s incorporate stateful management of chat history and send the final prompt, \n",
-    "# including chat history and retrieved context to the model for an output.\n",
-    "chat_history_for_chain = InMemoryChatMessageHistory()\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "# Create a dictionary to store chat histories per session\n",
+    "session_chat_histories = defaultdict(InMemoryChatMessageHistory)\n",
+    "\n",
+    "# Modify your RunnableWithMessageHistory to use session-specific histories\n",
+    "\n",
     "qa_with_history = RunnableWithMessageHistory(\n",
     "    history_aware_qa,\n",
-    "    lambda _: chat_history_for_chain,\n",
+    "    lambda session_id: session_chat_histories[session_id],  # Now session-aware\n",
     "    input_messages_key=\"input\",\n",
     "    history_messages_key=\"chat_history\",\n",
     ")"
@@ -402,13 +407,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "432ec659162848b0b82ba807891e1d19",
+       "model_id": "3b2cc3baa03c49bc96e42d444cb5ade4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -426,7 +431,7 @@
     "    # Finally, let's invoke the chain\n",
     "    result = qa_with_history.invoke(\n",
     "        {\"input\": user_input},\n",
-    "        config={\"configurable\": {\"session_id\": \"1\"}},\n",
+    "        config={\"configurable\": {\"session_id\": \"123\"}},\n",
     "    )\n",
     "    return f\"{result}\"\n",
     "\n",
@@ -490,6 +495,71 @@
     "\n",
     "# Display the chatbot UI\n",
     "display(chatbot_ui)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "human: What is the main them of Verity?\n",
+      "ai: <think>\n",
+      "Okay, so I need to figure out the main theme of the book \"Verity\" by Colleen Hoover based on the provided context. Let me go through each document one by one to see what clues I can find.\n",
+      "\n",
+      "Starting with the first document (id='f95a3898-4529-4707-8c52-0adfbf1cc83a', page 61), the narrator is talking about skimming through the first and second books, making notes on characters. They mention needing to understand what motivates the characters, what moves them, and what sets them off. This suggests that the story is character-driven and possibly delves into the psychological aspects of the characters.\n",
+      "\n",
+      "The second document (id='0b2ac7fc-9250-4201-b2fc-14474f029b0e', page 94) discusses the narrator's obsession with Verity and how she's putting a lot of herself into her series. The narrator justifies their snooping as research, indicating that Verity's personal life and writing are deeply connected. This might hint at themes of identity or the blurring of reality and fiction.\n",
+      "\n",
+      "Moving to the third document (id='9f6271a5-9035-484a-b727-bf27d4b588e5', page 118), the narrator is avoiding dinner because April has Verity at the table, showing some tension or fear towards Verity. They also mention staring at the drawer with Verity's manuscript and deciding to read one more chapter, which suggests a mix of curiosity and apprehension. This could relate to themes of obsession or the impact of someone's work on others.\n",
+      "\n",
+      "The fourth document (id='b8e41ac4-8a87-462a-b006-600996edd803', page 52) talks about the narrator's curiosity about Verity's marriage and the ominous sentence ending the first chapter. This sentence implies a dark secret, which might be a writing strategy to set up future plot points. It touches on themes of marriage, secrets, and possibly betrayal.\n",
+      "\n",
+      "The fifth document (id='8d1cb81f-b659-4ec1-bc8d-7511d8b42536', page 87) mentions that Verity's suspense novels are successful because they're written from the villain's point of view. The narrator is trying to convince themselves that Verity is a better person than she seems. This suggests themes of deception, the complexity of human nature, and the idea that people might not be as they appear.\n",
+      "\n",
+      "Putting it all together, the main themes seem to revolve around the complexity of characters, the impact of secrets and lies, the blurring of reality and fiction, and the psychological aspects of human behavior. The story likely explores how people's true selves can be hidden behind facades, and how this affects their relationships and the stories they tell.\n",
+      "</think>\n",
+      "\n",
+      "The main themes of \"Verity\" by Colleen Hoover appear to revolve around the complexity of human nature, the impact of secrets and lies, and the psychological aspects of characters. The story explores how individuals may hide their true selves behind facades, affecting their relationships and the narratives they create. Additionally, the blurring of reality and fiction is a significant theme, as Verity's personal life and writing are deeply intertwined, leading to a mix of curiosity, apprehension, and obsession.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get messages for session 123\n",
+    "history_for_123 = session_chat_histories[\"123\"].messages\n",
+    "\n",
+    "# Print formatted messages\n",
+    "for msg in history_for_123:\n",
+    "    print(f\"{msg.type}: {msg.content}\")\n",
+    "    print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No messages found for session 456.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get messages for session 123\n",
+    "history_for_456 = session_chat_histories[\"456\"].messages\n",
+    "\n",
+    "if not history_for_456:\n",
+    "    print(\"No messages found for session 456.\")\n",
+    "\n",
+    "else:\n",
+    "    for msg in history_for_456:\n",
+    "        print(f\"{msg.type}: {msg.content}\")"
    ]
   },
   {
